cabal-version:        2.4
name:                 th-text-format
version:              0.1.0.0
-- synopsis:
-- description:
homepage:             https://github.com/johnsonwj/th-text-format#readme
license:              GPL-3.0-or-later
license-file:         LICENSE
author:               Will Johnson
maintainer:           maintainer@willj.dev
copyright:            2019 Will Johnson
category:             Text
build-type:           Simple
extra-source-files:   README.md

common build-opts
  default-language:   Haskell2010
  default-extensions: TemplateHaskellQuotes, LambdaCase, OverloadedStrings
  ghc-options:        -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

library
  import:               build-opts
  hs-source-dirs:       src
  build-depends:        base, text, megaparsec, parser-combinators, template-haskell, data-default, recursion-schemes
  exposed-modules:      Text.Format
                      , Text.Format.Formatter
                      , Text.Format.Parsers
                      , Text.Format.Parsers.Common
                      , Text.Format.Parsers.C
                      , Text.Format.Parsers.Python
                      , Text.Format.Quoters
                      , Text.Format.Specifier

test-suite tests
  import:               build-opts
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  build-depends:        base, hspec, th-text-format, megaparsec, text
  build-tool-depends:   hspec-discover:hspec-discover
  other-modules:        CParserSpec
